# Pantheon-Tiling

./: .gitignore  README.md
data/: gala.gschema.xml
gala/data/: gala.gschema.xml
gala/src/: BspLayout.vala  BspTilingConfig.vala  BspTree.vala  DBus.vala  WindowManager.vala  meson.build
gala/tests/src/: BspLayoutTest.vala  meson.build
gala/tools/: NestedDemoWindows.vala  run-nested-demo.sh  run-nested-pantheon.sh
panel-bsp/: README.md  meson.build
panel-bsp/data/: gresource.xml  help-overlay.ui
panel-bsp/src/: GalaClient.vala  HelpMain.vala  HelpOverlay.vala  Indicator.vala
scripts/: install-all.sh
src/: BspLayout.vala  BspTilingConfig.vala  BspTree.vala  DBus.vala  InternalUtils.vala  WindowManager.vala
tests/src/: BspLayoutTest.vala
tools/: rebuild-install.sh  run-nested-demo.sh  run-nested-pantheon.sh
